cmd/tscc/testdata/compiler/DidYouMeanSuggestionErrors.txtar
# Ported from tests/cases/compiler/didYouMeanSuggestionErrors.ts by tools/portcase.
# DO NOT EDIT by hand; re-run the porter if the upstream baseline changes.
! exec tscc --lib es5 --target es2015 --out-js didYouMeanSuggestionErrors.js didYouMeanSuggestionErrors.ts
stderr 'TS2593'
stderr 'TS2592'
stderr 'TS2584'
stderr 'TS2591'
stderr 'TS2583'
stderr 'TS2585'
! exists didYouMeanSuggestionErrors.js
! exists didYouMeanSuggestionErrors.d.ts
! exists didYouMeanSuggestionErrors.js.map

-- didYouMeanSuggestionErrors.ts --
describe("my test suite", () => {
    it("should run", () => {
        const a = $(".thing");
    });
});

suite("another suite", () => {
    test("everything else", () => {
        console.log(process.env);
        document.createElement("div");

        const x = require("fs");
        const y = Buffer.from([]);
        const z = module.exports;

        const a = new Map();
        const b = new Set();
        const c = new WeakMap();
        const d = new WeakSet();
        const e = Symbol();
        const f = Promise.resolve(0);

        const i: Iterator<any> = null as any;
        const j: AsyncIterator<any> = null as any;
        const k: Symbol = null as any;
        const l: Promise<any> = null as any;
    });
});
